   * Added a new scroll label widget.
   * Allowed usage of wildcards (? and *) in friend and ignore lists.
   * Allowed usage of lists in /friend, /ignore and /remove commands. (feature
     #7492)
   * Added a new image widget.
   * Added a feature to draw hex coordinates and/or terrain code on every hex.
     Available in-game via :sc and :tc commands, and in editor2's menu.
 * WML engine:
   * New command, [store_time_of_day], makes it possible to store ToD info
     in a WML array/container.
   * Changed underlying_id in unit to be unique number
   * New command, [end_turn], ends the current side's turn.
 * AI
   * Made it possible to use formula AI for recruiting when using default ai
   * Changed defaults for AI parameters: village_value, villages_per_scout,
     protect_leader, protect_leader_radius, leader_value
   * Added new ai paramater number_of_possible_recruits_to_force_recruit which
     tells AI when it must move leader back to keep.
   * Improved leader movement and protection.
   * Improved village grabbing and protection.
   * Made 'caution' to control how dangerous place AI tries to attack
 * Miscellaneous and bug fixes:
   * The config dir can now be changed when defining APPDATA_USERDATA at
     compile-time to default to a dir under %APPDATA% on windows.
     When specifying --config-dir on the command line %APPDATA% is used even
     without that define.
   * Fixed the list of the unit's attacks getting cut off in the right panel
     (bug #12297).
   * Fixed wesnoth not to try to add duplicate ids to unit_map
   * Fixed a bug where the old unit type's abilities and attacks weren't
     completely cleared during level-up
   * Improved performance of 'recall' user action when disallow_recall
     is set to true in scenarios.
   * Various code cleanups
   * Removed the requirement for files in ~campaigns to have a corresponding
     directory.

Version 1.5.4:
 * Editor2:
   * Rotate clipboard 60 deg. cw/ccw, ctrl+r/ctrl+shift+r respectively